Added meta tags

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,9 +5,21 @@
 		<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
-		<meta name="description" content="Play Music for fun" />
+		<meta
+			name="description"
+			content="EDM Enthusiasts website! Find great FREE plugins and read our blog posts about EDM production and more!"
+		/>
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-		<title>My App</title>
+		<meta
+			name="google-site-verification"
+			content="CrYeAkNlfR1Xn102ebn7xj3t5pBygBsCsFQlWFPssN8"
+		/>
+		<meta name="language" content="english" />
+		<meta
+			name="keywords"
+			content="edm, music, production, vst, plugin, house, future bass, bass, sound, sound engineering, sound engineering course, free, free vst plugins, free plugins, free course, blog, blog articles, blogs"
+		/>
+		<title>EDM Enthusiasts</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
