Added more animations

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -20,6 +20,10 @@
 			content="edm, music, production, vst, plugin, house, future bass, bass, sound, sound engineering, sound engineering course, free, free vst plugins, free plugins, free course, blog, blog articles, blogs"
 		/>
 		<title>EDM Enthusiasts</title>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+		/>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
