Working on a tag system

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -19,6 +19,7 @@
 			name="keywords"
 			content="edm, music, production, vst, plugin, house, future bass, bass, sound, sound engineering, sound engineering course, free, free vst plugins, free plugins, free course, blog, blog articles, blogs"
 		/>
+		<meta name="author" content="Emil S" />
 		<title>EDM Enthusiasts</title>
 		<link
 			rel="stylesheet"
