--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -35,5 +35,7 @@
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
+		<script src="/__/firebase/7.2.1/firebase-app.js"></script>
+		<script src="/__/firebase/init.js"></script>
 	</body>
 </html>
